# presenter

./: .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  audit.toml  audit_bohaty.json  cargo-deny.toml  clippy.toml  codecov.yml  deny.toml  docker-compose.demo.yml  docker-compose.gateway.yml  docker-compose.osc.yml  legacy-bible-snapshot.md  operator-after-library.yml  package-lock.json  package.json  playwright.config.ts  release-please-config.json  rust-toolchain.toml  rustfmt.toml  stagefit_nehladam.json  test  test2  tsconfig.json  wasm-bible-snapshot.md
crates/presenter-bible/: Cargo.toml
crates/presenter-bible/src/: lib.rs  parse.rs  parsers.rs  provider.rs  spec.rs
crates/presenter-core/: Cargo.toml
crates/presenter-core/src/: ableset.rs  android_stage_display.rs  bible.rs  contract_tests.rs  feature_flags.rs  id.rs  lib.rs  library.rs  live.rs  osc.rs  playlist.rs  presentation.rs  resolume.rs  search.rs  slide.rs  stage_appearance.rs  stage_client.rs  stage_design.rs  stage_display.rs  tests.rs  timer.rs  video_source.rs
crates/presenter-core/src/bible/: canonical.rs  mod.rs  presentation.rs  reference.rs  search.rs  translation.rs
crates/presenter-importer/: Cargo.toml  build.rs
crates/presenter-importer/examples/: check_order.rs  import_root.rs  inspect_groups.rs
crates/presenter-importer/src/: bible.rs  bible_digest.rs  lib.rs  nfc.rs  rtf.rs
crates/presenter-migration/: Cargo.toml
crates/presenter-migration/src/: bible_fts_triggers.rs  lib.rs  m20250927_000001_create_core_tables.rs  m20260408_000001_add_preach_limit.rs  m20260410_000001_separate_bible.rs  m20260412_000001_bible_fts.rs  m20260414_000001_bible_translation_digest.rs  m20260414_000002_seed_android_stage_displays.rs  m20260420_000001_create_group_colors.rs  m20260506_000001_normalize_text_to_nfc.rs  m20260517_000001_create_settings_audit.rs  m20260517_000002_fix_legacy_ableset_defaults.rs  m20260616_000001_fix_android_stage_launch_package.rs  m20260624_000001_default_launch_to_presenter_stage.rs  m20260625_000001_add_video_sources.rs  m20260628_000001_create_resolume_push_audit.rs  m20260629_000001_add_stage_active_entry_index.rs  m20260702_000001_create_slide_stage_layouts.rs
crates/presenter-ndi/: Cargo.toml
crates/presenter-ndi/src/: clock.rs  discovery.rs  encoder.rs  lib.rs  manager.rs  ndi_sdk.rs  pipeline.rs  receiver.rs  test_strip.rs  tier.rs  tier_registry.rs  webrtc_session.rs  whep.rs  whep_session.rs
crates/presenter-ndi/src/manager/: lifecycle.rs  supervisor.rs  whep.rs
crates/presenter-ndi/src/pipeline/: adaptive.rs  build.rs  compat_controller.rs  consumer_audio.rs  consumer_build.rs  consumers.rs  ingest_timing.rs  lifecycle.rs  negotiation.rs  playout_delay.rs  reaper.rs  tests.rs
crates/presenter-persistence/: Cargo.toml
crates/presenter-persistence/src/: audit.rs  entities.rs  lib.rs  repository.rs  zz_deleted_repository.rs
crates/presenter-persistence/src/repository/: ableset.rs  android_stage.rs  app_settings.rs  audit.rs  bible.rs  group_color.rs  helpers.rs  libraries.rs  library.rs  mod.rs  osc.rs  playlist.rs  playlists.rs  presentation.rs  presentations.rs  resolume.rs  search.rs  slide_stage_layout.rs  stage.rs  stage_state.rs  tests.rs  timer_state.rs  util.rs
crates/presenter-server/: Cargo.toml  build.rs
crates/presenter-server/src/: ableset.rs  adaptive_mjpeg.rs  android_stage.rs  bible_script.js  companion.rs  config.rs  live.rs  main.rs  operator_script.js  osc.rs  resolume.rs  router.rs  settings_script.js  stage_connections.rs  stage_ui.rs  state.rs  tablet_script.js  turn.rs  ui.rs
crates/presenter-server/src/ai/: agent.rs  bible_validator.rs  client.rs  mod.rs  proxy.rs  style_guide.md  tool_defs.rs  tools.rs
crates/presenter-server/src/assets/: stage_lite.html
crates/presenter-server/src/companion/: mod.rs  protocol.rs  tests.rs  variables.rs
crates/presenter-server/src/mock_integrations/: ableset.rs  mod.rs  request_log.rs  resolume.rs
crates/presenter-server/src/osc/: handler.rs  mod.rs  parser.rs
crates/presenter-server/src/resolume/: backoff_tests.rs  clip_map.rs  driver.rs  handlers.rs  latency_tests.rs  mod.rs  tests.rs  types.rs
crates/presenter-server/src/router/: ai.rs  api_stage.rs  bible.rs  features.rs  libraries.rs  network_mode.rs  playlists.rs  presentations.rs  search.rs  settings.rs  slide_stage_layout.rs  stage.rs  stage_lite.rs  stage_shell.rs  tablet_pwa.rs  tests.rs  timers.rs  ui_routes.rs  wasm_ui.rs
crates/presenter-server/src/stage_ui/: layouts.rs  mod.rs  styles.rs  tests.rs
crates/presenter-server/src/state/: ableset.rs  android_stage.rs  api_stage.rs  app.rs  bible.rs  bible_manager.rs  broadcasting.rs  cache_manager.rs  companion.rs  companion_manager.rs  companion_server.rs  integrations.rs  mod.rs  ndi_control.rs  osc.rs  presentations.rs  resolume.rs  seed.rs  settings.rs  slide_stage_layout.rs  slides.rs  stage.rs  stage_display.rs  stage_state.rs  tests.rs  timers.rs
crates/presenter-server/src/ui/: bible.rs  home.rs  mod.rs  models.rs  operator.rs  settings.rs  stage_design.rs  stage_settings.rs  tablet.rs  tablet_sw.js  timer_overlay.rs  utils.rs
crates/presenter-ui/: Cargo.toml  Trunk.toml  index.html
crates/presenter-ui/.cargo/: config.toml
crates/presenter-ui/src/: context_macros.rs  lib.rs
crates/presenter-ui/src/api/: ai.rs  bible.rs  libraries.rs  mod.rs  ndi.rs  network.rs  playlists.rs  presentations.rs  settings.rs  stage.rs  timers.rs
crates/presenter-ui/src/components/: header.rs  info_popover.rs  library_list.rs  library_modal.rs  mod.rs  modal.rs  playlist_list.rs  playlist_modal.rs  presentation_list.rs  presentation_list_drag.rs  presentation_modal.rs  search.rs  slide_list.rs  slide_list_scroll.rs  slide_list_utils.rs  slide_save.rs  slide_stage_layout_picker.rs  stage_preview.rs  surface_nav.rs  timer_panel.rs  toast.rs  version_label.rs
crates/presenter-ui/src/pages/: ai.rs  mod.rs  (+9 more)
crates/presenter-ui/styles/: bible.css  operator.css  settings.css  stage.css  tablet.css
(+1813 files in other folders)
