[package]
name = "presenter-bible"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
presenter-core = { path = "../presenter-core" }
reqwest.workspace = true
tokio.workspace = true
zip = { version = "7.0", default-features = false, features = ["deflate"] }
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"

[lints]
workspace = true

[dev-dependencies]
