[package]
name = "presenter-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
insta.workspace = true
rstest = "0.19"
serde_json.workspace = true

[lints]
workspace = true
