[package]
name = "presenter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
unicode-normalization.workspace = true
once_cell.workspace = true

[dev-dependencies]
insta.workspace = true
rstest = "0.26"
serde_json.workspace = true

[lints]
workspace = true
