[package]
name = "presenter-importer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-bible = { path = "../presenter-bible" }
presenter-persistence = { path = "../presenter-persistence" }
prost = { version = "0.11", features = ["std"] }
rtf-parser = "0.4"
encoding_rs = "0.8"
tracing.workspace = true
tokio.workspace = true


[build-dependencies]
prost-build = "0.11"
walkdir = "2"

[dev-dependencies]
async-trait.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
