[package]
name = "presenter-migration"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true

[lints]
workspace = true
