[package]
name = "presenter-migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true

