[package]
name = "presenter-migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

