[package]
name = "presenter-ndi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = []
# Gates the #336 RED regression test until Task 4 lands the real topology.
# Removed in Task 4 — the test must run unconditionally on every CI host.
fanout-redgreen = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading = "0.8"
futures-util.workspace = true
gstreamer.workspace = true
gstreamer-webrtc.workspace = true
gst-plugin-webrtc.workspace = true
gst-plugin-ndi.workspace = true
gst-plugin-rtp.workspace = true
