[package]
name = "presenter-ndi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading = "0.8"
futures-util.workspace = true
gstreamer.workspace = true
gstreamer-webrtc.workspace = true
gst-plugin-webrtc.workspace = true
gst-plugin-ndi.workspace = true
gst-plugin-rtp.workspace = true
uuid.workspace = true
