[package]
name = "presenter-ndi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = []

# Synthetic NDI sender for deterministic E2E (self-hosted e2e-ndi lane).
# Gated behind test-helpers so it never builds into production binaries.
[[bin]]
name = "ndi_test_sender"
required-features = ["test-helpers"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading = "0.8"
futures-util.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true
gstreamer-utils.workspace = true
gstreamer-webrtc.workspace = true
gstreamer-rtp = { version = "0.25", features = ["v1_22"] }
gst-plugin-webrtc.workspace = true
gst-plugin-ndi.workspace = true
gst-plugin-rtp.workspace = true
uuid.workspace = true
