[package]
name = "presenter-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
once_cell.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-migration = { path = "../presenter-migration" }
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde_json.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-migration = { path = "../presenter-migration" }
chrono.workspace = true
tokio.workspace = true
rstest = "0.19"

[lints]
workspace = true
