[package]
name = "presenter-server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-persistence = { path = "../presenter-persistence" }
presenter-importer = { path = "../presenter-importer" }
presenter-bible = { path = "../presenter-bible" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
leptos.workspace = true
reactive_graph.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
serde_with.workspace = true
reqwest.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
presenter-persistence = { path = "../presenter-persistence" }
async-trait.workspace = true
wiremock = "0.6"

[lints]
workspace = true
