[package]
name = "presenter-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-persistence = { path = "../presenter-persistence" }
presenter-importer = { path = "../presenter-importer" }
presenter-bible = { path = "../presenter-bible" }
presenter-ndi = { path = "../presenter-ndi" }
bytes = "1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
leptos.workspace = true
reactive_graph.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
serde_with.workspace = true
reqwest.workspace = true
rosc = "0.10"
include_dir = "0.7"
async-stream = "0.3"
regex = "1"

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
presenter-persistence = { path = "../presenter-persistence" }
async-trait.workspace = true
wiremock = "0.6"
tempfile = "3"

