[package]
name = "presenter-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
presenter-core = { path = "../presenter-core" }
presenter-persistence = { path = "../presenter-persistence" }
presenter-importer = { path = "../presenter-importer" }
presenter-bible = { path = "../presenter-bible" }
presenter-ndi = { path = "../presenter-ndi" }
bytes = "1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
leptos.workspace = true
reactive_graph.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
serde_with.workspace = true
reqwest.workspace = true
rosc = "0.10"
include_dir = "0.7"
async-stream = "0.3"
regex = "1"
async-trait.workspace = true

[features]
default = []
mock-integrations = []
test-helpers = ["presenter-ndi/test-helpers"]

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
presenter-persistence = { path = "../presenter-persistence" }
wiremock = "0.6"
tempfile = "3.10"
# Real WebSocket client for the /live/ws integration test (#471). Version
# matches the tokio-tungstenite axum's `ws` feature already pulls in.
tokio-tungstenite = "0.29"

