[package]
name = "presenter-ui"
version = "0.1.19"
edition = "2021"
authors = ["Presenter Team <drlik.zbynek@gmail.com>"]
license = "MIT"
repository = "https://github.com/zbynekdrlik/presenter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
presenter-core = { path = "../presenter-core" }
leptos = { version = "0.7", default-features = false, features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.8", features = ["serde", "v4", "js"] }
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-storage = "0.3"
gloo-timers = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "DataTransfer",
    "DomRect",
    "DomStringMap",
    "DomTokenList",
    "Document",
    "DragEvent",
    "Element",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "PointerEvent",
    "PopStateEvent",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition",
    "Window",
    "Clipboard",
    "Navigator",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "Response",
    "TextDecoder",
    "BinaryType",
    "BlobPropertyBag",
    "HtmlImageElement",
    "MessageEvent",
    "Url",
    "WebSocket",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
futures-util = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
urlencoding = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
